Fix horizontal scrollbars on multiple breakpoints

--- a/_sass/base_styles.scss
+++ b/_sass/base_styles.scss
@@ -291,7 +291,7 @@ pre {
     letter-spacing: 1.33px;
     line-height: rem(32px);
     text-transform: uppercase;
-    margin-bottom: rem(30px);
+    margin-bottom: rem(20px);
     @include desktop {
       margin-bottom: rem(60px);
     }
@@ -308,6 +308,23 @@ pre {
 
   p {
     color: $very_dark_grey;
+  }
+}
+
+.article-page-module .module-header {
+  position: relative;
+}
+
+.article-page-module .module-button {
+  padding-left: 0;
+  @include desktop {
+    position: absolute;
+    right: 15px;
+    top: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    background-position: center right;
+    padding-right: 16px;
   }
 }
 
