--- a/_sass/bootstrap-overrides.scss
+++ b/_sass/bootstrap-overrides.scss
@@ -1,8 +1,3 @@
 .container {
   max-width: 1240px;
-
-  @include max-width-desktop {
-    padding-left: 0;
-    padding-right: 0;
-  }
 }
