--- a/_sass/homepage.scss
+++ b/_sass/homepage.scss
@@ -33,6 +33,12 @@
   @include desktop {
     padding-top: rem(80px);
     padding-bottom: rem(80px);
+
+    .module-button {
+      position: absolute;
+      right: 15px;
+      top: 0;
+    }
   }
 
   p {
@@ -159,7 +165,7 @@
     width: 100%;
     margin: 0 auto;
 
-    @include desktop {
+    @include max-width-desktop {
       width: 385px;
     }
   }
@@ -184,13 +190,13 @@
   }
 
   .carousel-control-prev {
-    @include desktop {
+    @include max-width-desktop {
       left: -65px;
     }
   }
 
   .carousel-control-next {
-    @include desktop {
+    @include max-width-desktop {
       right: -65px;
     }
   }
